test/trivial/shannon/readWriteEnum.good
Tuesday
readWriteEnum.chpl:6: error: bad format in channel.read(ref a:week) with path "readWriteEnum.stdin" offset 8
